--- a/src/app/shared/components/event-editor-modal/event-editor-modal.component.html
+++ b/src/app/shared/components/event-editor-modal/event-editor-modal.component.html
@@ -11,34 +11,113 @@
         ></mdb-icon>
     </button>
 </div>
-<form [formGroup]="eventForm" (ngSubmit)="updateEvent()">
+<form [formGroup]="form.formGroup" (ngSubmit)="updateEvent()">
     <div class="modal-body">
-        <label for="date">{{ "HOME.EVENTS.INITIAL_DATE" | translate }}</label>
-        <input
-            type="date"
-            id="date"
-            class="form-control"
-            formControlName="date"
-            required
-        >
-        <div *ngIf="(date.invalid && (date.dirty || date.touched)) || !!errorI18n" class="error-container">
-            <p *ngIf="date.errors?.['required']" class="error">
-                {{ "HOME.EVENTS.EDIT.ERROR.DATE_REQUIRED" | translate }}
-            </p>
-            <p *ngIf="date.errors?.['pattern']" class="error">
-                {{ "HOME.EVENTS.EDIT.ERROR.DATE_INVALID" | translate }}
-            </p>
-            <p *ngIf="date.errors?.['pastDate']" class="error">
-                {{ "HOME.EVENTS.EDIT.ERROR.DATE_PAST" | translate }}
-            </p>
-            <p *ngIf="!!errorI18n" class="error">
+        <div *ngFor="let eventDate of eventDates" class="event-date-container" formGroupName="{{eventDate}}">
+            <h3 class="event-date-title">{{ ("HOME.EVENTS.DATE." + eventDate) | translate }}</h3>
+            <div class="event-date-info">
+                <label for="{{eventDate + '-status'}}">{{ "HOME.EVENTS.STATUS.TITLE" | translate }}</label>
+                <div class="status-container">
+                    <div *ngFor="let eventStatus of eventStatuses" class="status-item">
+                        <span class="status-tooltip" [class.hidden]="!isTooltipVisible(eventStatus)">
+                            {{ ("HOME.EVENTS.STATUS." + eventStatus + ".DESCRIPTION") | translate }}
+                        </span>
+                        <div class="status-input" (mouseover)="toggleTooltip(eventStatus)" (mouseout)="toggleTooltip(eventStatus)">
+                            <input
+                                type="hidden"
+                                id="{{eventDate + '-status'}}"
+                                formControlName="status"
+                                value="{{eventStatus}}"
+                                required
+                            >
+                            <button type="button" class="btn status-btn" [style.--color]="(getAppColors() | async).background"
+                                    [class.active]="isEventDateStatus(eventDate, eventStatus)"
+                                    (click)="setEventDateStatus(eventDate, eventStatus)"
+                            >
+                                <span>{{ ("HOME.EVENTS.STATUS." + eventStatus + ".TITLE") | translate }}</span>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div *ngIf="isEventDateConfirmed(eventDate)" class="event-date">
+                    <label for="{{eventDate + '-date'}}">{{ "HOME.EVENTS.DATE.TITLE" | translate }}</label>
+                    <input
+                        type="date"
+                        id="{{eventDate + '-date'}}"
+                        class="form-control"
+                        formControlName="date"
+                        required
+                    >
+                    <div *ngIf="hasFieldError(eventDate, 'date')" class="error-container">
+                        <p *ngIf="hasFieldError(eventDate, 'date', 'pattern')" class="error">
+                            {{ "HOME.EVENTS.EDIT.ERROR.DATE_INVALID" | translate }}
+                        </p>
+                        <p *ngIf="hasFieldError(eventDate, 'date', 'pastDate')" class="error">
+                            {{ "HOME.EVENTS.EDIT.ERROR.DATE_PAST" | translate }}
+                        </p>
+                    </div>
+                </div>
+                <div *ngIf="isEventDateTentative(eventDate)" class="event-month">
+                    <label for="{{eventDate + '-month'}}">{{ "HOME.EVENTS.MONTH.TITLE" | translate }}</label>
+                    <select
+                        id="{{eventDate + '-month'}}"
+                        class="form-select"
+                        formControlName="month"
+                    >
+                        <option [value]="defaultMonthValue">{{ "HOME.EVENTS.MONTH.PLACEHOLDER" | translate }}</option>
+                        <option *ngFor="let month of months" [value]="month">{{ ('MONTH.' + month) | translate }}</option>
+                    </select>
+                    <div *ngIf="hasFieldError(eventDate, 'month')" class="error-container">
+                        <p *ngIf="hasFieldError(eventDate, 'month', 'pattern')" class="error">
+                            {{ "HOME.EVENTS.EDIT.ERROR.MONTH_INVALID" | translate }}
+                        </p>
+                        <p *ngIf="hasFieldError(eventDate, 'month', 'invalidMonth')" class="error">
+                            {{ "HOME.EVENTS.EDIT.ERROR.MONTH_INVALID" | translate }}
+                        </p>
+                        <p *ngIf="hasFieldError(eventDate, 'month', 'pastMonth')" class="error">
+                            {{ "HOME.EVENTS.EDIT.ERROR.MONTH_PAST" | translate }}
+                        </p>
+                    </div>
+                </div>
+                <div *ngIf="isEventDateUpcoming(eventDate)" class="event-year"><label for="{{eventDate + '-year'}}">{{ "HOME.EVENTS.YEAR.TITLE" | translate }}</label>
+                    <input
+                        type="number"
+                        id="{{eventDate + '-year'}}"
+                        class="form-control"
+                        formControlName="year"
+                        required
+                    >
+                    <div *ngIf="hasFieldError(eventDate, 'year')" class="error-container">
+                        <p *ngIf="hasFieldError(eventDate, 'year', 'pattern')" class="error">
+                            {{ "HOME.EVENTS.EDIT.ERROR.YEAR_INVALID" | translate }}
+                        </p>
+                        <p *ngIf="hasFieldError(eventDate, 'year', 'pastYear')" class="error">
+                            {{ "HOME.EVENTS.EDIT.ERROR.YEAR_PAST" | translate }}
+                        </p>
+                    </div>
+                </div>
+                <div *ngIf="hasFormError(eventDate)" class="error-container">
+                    <p *ngIf="hasFormError(eventDate, 'dateRequired')" class="error">
+                        {{ "HOME.EVENTS.EDIT.ERROR.DATE_REQUIRED" | translate }}
+                    </p>
+                    <p *ngIf="hasFormError(eventDate, 'monthRequired')" class="error">
+                        {{ "HOME.EVENTS.EDIT.ERROR.MONTH_REQUIRED" | translate }}
+                    </p>
+                    <p *ngIf="hasFormError(eventDate, 'yearRequired')" class="error">
+                        {{ "HOME.EVENTS.EDIT.ERROR.YEAR_REQUIRED" | translate }}
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div *ngIf="!!errorI18n" class="error-container">
+            <p class="error">
                 {{ errorI18n | translate }}
             </p>
         </div>
     </div>
     <div class="modal-footer" [style.--color]="(getAppColors() | async).background">
         <button type="button" class="btn close-btn" (click)="modalRef.hide()">{{ "HOME.EVENTS.EDIT.CANCEL" | translate }}</button>
-        <button type="submit" class="btn save-btn" [disabled]="eventForm.invalid || loading">
+        <button type="submit" class="btn save-btn" [disabled]="loading || !hasFormChanged() || !isFormValid()">
             {{ "HOME.EVENTS.EDIT.UPDATE" | translate }}
         </button>
     </div>
