--- a/src/app/shared/components/button/button.component.html
+++ b/src/app/shared/components/button/button.component.html
@@ -5,7 +5,7 @@
     [ngClass]="{'asimov-variation': asimov === true}"
     >
     <button mat-raised-button class="ieeecard-button me-3" [disabled]="disabled">
-        <mat-icon *ngIf="icon">{{icon}}</mat-icon>
+        <mat-icon class="align-middle" *ngIf="icon">{{icon}}</mat-icon>
         <ng-content></ng-content>
     </button>
 </a>
