feat: add icon to EventCardShortComponent

--- a/src/app/shared/components/event-card-short/event-card-short.component.html
+++ b/src/app/shared/components/event-card-short/event-card-short.component.html
@@ -11,6 +11,7 @@
       <div class="text-position">
         <div class="date-inner-container">
             <span>{{getEventDate()}}</span>
+            <i class="fa {{getEventIconClass()}} ms-1"></i>
         </div>
         <p class="text-on-image">
           {{ event.titleCode | translate }}
