--- a/src/app/shared/components/event-editor-modal/event-editor-modal.component.html
+++ b/src/app/shared/components/event-editor-modal/event-editor-modal.component.html
@@ -13,7 +13,7 @@
 </div>
 <form [formGroup]="form.formGroup" (ngSubmit)="updateEvent()">
     <div class="modal-body">
-        <mat-tab-group dynamicHeight class="event-dates-tabs" [style.--color]="(getAppColors() | async).background">
+        <mat-tab-group dynamicHeight class="event-dates-tabs" [style.--color]="(getAppColors() | async).background" animationDuration="0ms">
             <mat-tab *ngFor="let eventDate of eventDates">
                 <ng-template mat-tab-label>
                     <span class="event-date-tab" [style.--color]="(getAppColors() | async).background">{{ ("HOME.EVENTS.DATE." + eventDate) | translate }}</span>
@@ -44,21 +44,40 @@
                             </div>
                         </div>
                         <div *ngIf="isEventDateConfirmed(eventDate)" class="event-date">
-                            <label for="{{eventDate + '-date'}}">{{ "HOME.EVENTS.DATE.TITLE" | translate }}</label>
-                            <input
-                                type="date"
-                                id="{{eventDate + '-date'}}"
-                                class="form-control"
-                                formControlName="date"
-                                required
-                            >
-                            <div *ngIf="hasFieldError(eventDate, 'date')" class="error-container">
-                                <p *ngIf="hasFieldError(eventDate, 'date', 'pattern')" class="error">
-                                    {{ "HOME.EVENTS.EDIT.ERROR.DATE_INVALID" | translate }}
-                                </p>
-                                <p *ngIf="hasFieldError(eventDate, 'date', 'pastDate')" class="error">
-                                    {{ "HOME.EVENTS.EDIT.ERROR.DATE_PAST" | translate }}
-                                </p>
+                            <div class="event-date-input-container">
+                                <div class="event-date-input">
+                                    <label for="{{eventDate + '-isPeriod'}}">{{ "HOME.EVENTS.IS_PERIOD.TITLE" | translate }}</label>
+                                    <input
+                                        type="checkbox"
+                                        id="{{eventDate + '-isPeriod'}}"
+                                        formControlName="isPeriod"
+                                        class="form-check-input-checkbox"
+                                        [style.--color]="(getAppColors() | async).background"
+                                    >
+                                </div>
+                            </div>
+                            <div class="event-date-input-container">
+                                <div class="event-date-input">
+                                    <label for="{{eventDate + '-date'}}">{{ isEventDateAPeriod(eventDate) ? ('HOME.EVENTS.DATE.FIRST' | translate) : ('HOME.EVENTS.DATE.UNIQUE' | translate) }}</label>
+                                    <input
+                                        type="date"
+                                        id="{{eventDate + '-date'}}"
+                                        class="form-control"
+                                        formControlName="date"
+                                        required
+                                    >
+                                </div>
+                            </div>
+                            <div class="event-date-input-container" *ngIf="isEventDateAPeriod(eventDate)">
+                                <div class="event-date-input">
+                                    <label for="{{eventDate + '-lastDate'}}">{{ "HOME.EVENTS.LAST_DATE.TITLE" | translate }}</label>
+                                    <input
+                                        type="date"
+                                        id="{{eventDate + '-lastDate'}}"
+                                        class="form-control"
+                                        formControlName="lastDate"
+                                    >
+                                </div>
                             </div>
                         </div>
                         <div *ngIf="isEventDateTentative(eventDate)" class="event-month">
@@ -71,17 +90,6 @@
                                 <option [value]="defaultMonthValue">{{ "HOME.EVENTS.MONTH.PLACEHOLDER" | translate }}</option>
                                 <option *ngFor="let month of months" [value]="month">{{ ('MONTH.' + month) | translate }}</option>
                             </select>
-                            <div *ngIf="hasFieldError(eventDate, 'month')" class="error-container">
-                                <p *ngIf="hasFieldError(eventDate, 'month', 'pattern')" class="error">
-                                    {{ "HOME.EVENTS.EDIT.ERROR.MONTH_INVALID" | translate }}
-                                </p>
-                                <p *ngIf="hasFieldError(eventDate, 'month', 'invalidMonth')" class="error">
-                                    {{ "HOME.EVENTS.EDIT.ERROR.MONTH_INVALID" | translate }}
-                                </p>
-                                <p *ngIf="hasFieldError(eventDate, 'month', 'pastMonth')" class="error">
-                                    {{ "HOME.EVENTS.EDIT.ERROR.MONTH_PAST" | translate }}
-                                </p>
-                            </div>
                         </div>
                         <div *ngIf="isEventDateUpcoming(eventDate)" class="event-year"><label for="{{eventDate + '-year'}}">{{ "HOME.EVENTS.YEAR.TITLE" | translate }}</label>
                             <input
@@ -91,30 +99,45 @@
                                 formControlName="year"
                                 required
                             >
-                            <div *ngIf="hasFieldError(eventDate, 'year')" class="error-container">
-                                <p *ngIf="hasFieldError(eventDate, 'year', 'pattern')" class="error">
-                                    {{ "HOME.EVENTS.EDIT.ERROR.YEAR_INVALID" | translate }}
-                                </p>
-                                <p *ngIf="hasFieldError(eventDate, 'year', 'pastYear')" class="error">
-                                    {{ "HOME.EVENTS.EDIT.ERROR.YEAR_PAST" | translate }}
-                                </p>
-                            </div>
-                        </div>
-                        <div *ngIf="hasFormError(eventDate)" class="error-container">
-                            <p *ngIf="hasFormError(eventDate, 'dateRequired')" class="error">
-                                {{ "HOME.EVENTS.EDIT.ERROR.DATE_REQUIRED" | translate }}
-                            </p>
-                            <p *ngIf="hasFormError(eventDate, 'monthRequired')" class="error">
-                                {{ "HOME.EVENTS.EDIT.ERROR.MONTH_REQUIRED" | translate }}
-                            </p>
-                            <p *ngIf="hasFormError(eventDate, 'yearRequired')" class="error">
-                                {{ "HOME.EVENTS.EDIT.ERROR.YEAR_REQUIRED" | translate }}
-                            </p>
                         </div>
                     </div>
                 </div>
             </mat-tab>
         </mat-tab-group>
+        <div *ngFor="let eventDate of eventDates" class="error-container">
+            <div *ngIf="hasFormError(eventDate)" class="error-container">
+                <p *ngIf="hasFormError(eventDate, 'dateRequired')" class="error">
+                    {{ ("HOME.EVENTS.DATE." + eventDate) | translate }}: {{ ("HOME.EVENTS.DATE." + eventDate) | translate }}: {{ "HOME.EVENTS.EDIT.ERROR.DATE_REQUIRED" | translate }}
+                </p>
+                <p *ngIf="hasFormError(eventDate, 'pastDate')" class="error">
+                    {{ ("HOME.EVENTS.DATE." + eventDate) | translate }}: {{ "HOME.EVENTS.EDIT.ERROR.DATE_PAST" | translate }}
+                </p>
+                <p *ngIf="hasFormError(eventDate, 'lastDateRequired')" class="error">
+                    {{ ("HOME.EVENTS.DATE." + eventDate) | translate }}: {{ "HOME.EVENTS.EDIT.ERROR.LAST_DATE_REQUIRED" | translate }}
+                </p>
+                <p *ngIf="hasFormError(eventDate, 'pastLastDate')" class="error">
+                    {{ ("HOME.EVENTS.DATE." + eventDate) | translate }}: {{ "HOME.EVENTS.EDIT.ERROR.LAST_DATE_PAST" | translate }}
+                </p>
+                <p *ngIf="hasFormError(eventDate, 'lastDateBeforeDate')" class="error">
+                    {{ ("HOME.EVENTS.DATE." + eventDate) | translate }}: {{ "HOME.EVENTS.EDIT.ERROR.LAST_DATE_BEFORE_DATE" | translate }}
+                </p>
+                <p *ngIf="hasFormError(eventDate, 'monthRequired')" class="error">
+                    {{ ("HOME.EVENTS.DATE." + eventDate) | translate }}: {{ "HOME.EVENTS.EDIT.ERROR.MONTH_REQUIRED" | translate }}
+                </p>
+                <p *ngIf="hasFormError(eventDate, 'invalidMonth')" class="error">
+                    {{ ("HOME.EVENTS.DATE." + eventDate) | translate }}: {{ "HOME.EVENTS.EDIT.ERROR.MONTH_INVALID" | translate }}
+                </p>
+                <p *ngIf="hasFormError(eventDate,  'pastMonth')" class="error">
+                    {{ ("HOME.EVENTS.DATE." + eventDate) | translate }}: {{ "HOME.EVENTS.EDIT.ERROR.MONTH_PAST" | translate }}
+                </p>
+                <p *ngIf="hasFormError(eventDate, 'yearRequired')" class="error">
+                    {{ ("HOME.EVENTS.DATE." + eventDate) | translate }}: {{ ("HOME.EVENTS.DATE." + eventDate) | translate }}: {{ "HOME.EVENTS.EDIT.ERROR.YEAR_REQUIRED" | translate }}
+                </p>
+                <p *ngIf="hasFormError(eventDate, 'pastYear')" class="error">
+                    {{ ("HOME.EVENTS.DATE." + eventDate) | translate }}: {{ "HOME.EVENTS.EDIT.ERROR.YEAR_PAST" | translate }}
+                </p>
+            </div>
+        </div>
         <div *ngIf="!!errorI18n" class="error-container">
             <p class="error">
                 {{ errorI18n | translate }}
