--- a/src/app/shared/components/event-content-card/event-content-card.component.css
+++ b/src/app/shared/components/event-content-card/event-content-card.component.css
@@ -3,6 +3,10 @@ mat-card-header{
     left: 0rem;
 }
 
+mat-card {
+    height: 100%;
+}
+
 .content-card{
     margin: 0 1rem;
     padding: 0 1rem;
