--- a/src/app/modules/mainpage/pages/mainpage/mainpage.component.css
+++ b/src/app/modules/mainpage/pages/mainpage/mainpage.component.css
@@ -298,4 +298,18 @@ h2{
   .section-title {
       font-size : 1.85rem;
   }
+
+  .section-header-logo {
+      height: 50px;
+      width: 50px;
+  }
+
+  .main-title {
+      left: 2.25em;
+  }
+
+  .aboutus-image {
+      height: 4rem;
+      width: 4rem;
+  }
 }
