--- a/src/app/modules/error404/pages/error404/error404.component.css
+++ b/src/app/modules/error404/pages/error404/error404.component.css
@@ -44,3 +44,9 @@
   color: black;
   background-color: whitesmoke;
 }
+
+@media (max-width: 991px) {
+    .page-not-found-image {
+        width : 7.5rem;
+    }
+}
