chores/mobile-chores (#76)
* Update button.component.html

Fixed vertical alignment.

* wie: adjusted button sizes

* Update event-content-card.component.css

* main-page subtitles size fixed in mobile

* mediaqueries mainpage

* Update error404.component.css

--- a/src/app/modules/mainpage/pages/mainpage/mainpage.component.css
+++ b/src/app/modules/mainpage/pages/mainpage/mainpage.component.css
@@ -294,4 +294,22 @@ h2{
   .section-divider {
       height: 2px;
   }
+
+  .section-title {
+      font-size : 1.85rem;
+  }
+
+  .section-header-logo {
+      height: 50px;
+      width: 50px;
+  }
+
+  .main-title {
+      left: 2.25em;
+  }
+
+  .aboutus-image {
+      height: 4rem;
+      width: 4rem;
+  }
 }
