--- a/src/app/modules/bitcup/pages/bitcup/bitcup.component.html
+++ b/src/app/modules/bitcup/pages/bitcup/bitcup.component.html
@@ -5,6 +5,8 @@
   >
   </app-event-facts-banner>
 
+  <app-event-date-section [dates]="event.dates" />
+
   <!-- bitcup -->
   <div class="info">
     <app-event-section
