--- a/src/app/modules/iot/pages/iot/iot.component.html
+++ b/src/app/modules/iot/pages/iot/iot.component.html
@@ -19,6 +19,8 @@
     </div>
   </div>
 
+  <app-event-date-section [dates]="event.dates" />
+
   <!-- Introductory text -->
   <app-event-section title="{{ 'IOT.DESC.TITLE' | translate }}">
     <p>{{ 'IOT.DESC.TEXT.1' | translate }}</p>
