--- a/src/app/modules/typescript/pages/typescript.component.html
+++ b/src/app/modules/typescript/pages/typescript.component.html
@@ -12,6 +12,7 @@
       </button>
     </div>
   </div>
+  <app-event-date-section [dates]="event.dates" />
   <app-event-section title="{{ 'TYPESCRIPT.DESCRIPTION.TITLE' | translate}}">
     <p>{{ 'TYPESCRIPT.DESCRIPTION.TEXT' | translate}}</p>
   </app-event-section>
