--- a/src/app/modules/data-analysis/pages/data-analysis/data-analysis.component.html
+++ b/src/app/modules/data-analysis/pages/data-analysis/data-analysis.component.html
@@ -14,6 +14,8 @@
     </div>
   </div>
 
+  <app-event-date-section [dates]="event.dates" />
+
   <div>
     <div class="d-flex flex-row-reverse">
       <div *ngIf="hasTestsAvailable() && !isContentClosed()">
