--- a/src/app/modules/typescript/pages/typescript.component.html
+++ b/src/app/modules/typescript/pages/typescript.component.html
@@ -12,7 +12,6 @@
       </button>
     </div>
   </div>
-  <app-event-date-section [dates]="event.dates" />
   <app-event-section title="{{ 'TYPESCRIPT.DESCRIPTION.TITLE' | translate}}">
     <p>{{ 'TYPESCRIPT.DESCRIPTION.TEXT' | translate}}</p>
   </app-event-section>
@@ -126,6 +125,8 @@
     <p> {{ 'TYPESCRIPT.FORMAT.3' | translate}}</p>
     <p> {{ 'TYPESCRIPT.FORMAT.4' | translate}}</p>
   </app-event-section>
+  <!-- DATES -->
+  <app-event-date-section [dates]="event.dates" />
   <!-- FAQ -->
   <app-event-section title="{{ 'PYTHONCOURSES.FAQ.TITLE' | translate}}">
     <app-event-faq-accordion [faq]="faq">
