--- a/src/app/modules/iot/pages/iot/iot.component.html
+++ b/src/app/modules/iot/pages/iot/iot.component.html
@@ -4,7 +4,7 @@
     alt="Banner IOT"
   >
   </app-event-banner>
-  <app-event-title>
+  <app-event-title [dates]="event?.dates">
     {{ 'IOT.TITLE' | translate }}
   </app-event-title>
 
@@ -27,7 +27,7 @@
     <p>{{ 'IOT.DESC.TEXT.4' | translate }}</p>
   </app-event-section>
 
-  <app-event-date-section [dates]="event.dates" />
+  <app-event-date-section [dates]="event?.dates" />
 
   <app-event-section title="{{ 'IOT.GALLERY_TITLE' | translate }}">
     <app-image-carousel [imageLinks]="imageLinks"></app-image-carousel>
