--- a/src/app/shared/components/event-title/event-title.component.html
+++ b/src/app/shared/components/event-title/event-title.component.html
@@ -2,4 +2,7 @@
     <h1 class="title">
         <ng-content></ng-content>
     </h1>
+    <div class="chip-list-container">
+        <app-event-date-chips [dates]="dates"></app-event-date-chips>
+    </div>
 </div>
