--- a/src/app/shared/components/event-editor-button/event-editor-button.component.html
+++ b/src/app/shared/components/event-editor-button/event-editor-button.component.html
@@ -5,7 +5,7 @@
 >
     <mdb-icon
         fas
-        size="2x"
         icon="edit"
+        class="icon"
     ></mdb-icon>
 </app-floating-button>
