--- a/src/app/shared/components/event-title/event-title.component.css
+++ b/src/app/shared/components/event-title/event-title.component.css
@@ -10,7 +10,6 @@
 
 .title-container {
     padding-top: 2vmin;
-    padding-bottom: 2vmin;
     border-top: var(--primary-color) 2px solid;
     border-bottom: var(--primary-color) 2px solid;
     vertical-align: middle;
@@ -18,6 +17,7 @@
     align-content: center;
     margin-bottom: 2%;
     position: relative;
+    padding-bottom: 1.5rem;
 }
 
 .title {
